# ChangeLog for games-strategy/triplea
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/triplea/ChangeLog,v 1.53 2013/05/31 21:41:14 mr_bones_ Exp $

*triplea-1.7.0.3 (31 May 2013)

  31 May 2013; Michael Sterrett <mr_bones_@gentoo.org> +triplea-1.7.0.3.ebuild:
  version bump

*triplea-1.6.1.4 (22 Mar 2013)

  22 Mar 2013; Julian Ospald <hasufell@gentoo.org> +triplea-1.6.1.4.ebuild:
  version bump wrt #349341

  10 Feb 2013; Agostino Sarubbo <ago@gentoo.org> triplea-1.6.1.2.ebuild:
  Stable for ppc, wrt bug #456058

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> triplea-1.6.1.2.ebuild:
  Stable for x86, wrt bug #456058

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> triplea-1.6.1.2.ebuild:
  Stable for amd64, wrt bug #456058

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -triplea-0.9.0.2-r1.ebuild:
  old

  07 Dec 2012; Agostino Sarubbo <ago@gentoo.org> triplea-1.5.2.1.ebuild:
  Stable for ppc, wrt bug #428346

*triplea-1.6.1.2 (14 Nov 2012)

  14 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> +triplea-1.6.1.2.ebuild:
  version bump

  05 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org> -triplea-1.0.0.3.ebuild:
  old

  05 Aug 2012; Agostino Sarubbo <ago@gentoo.org> triplea-1.5.2.1.ebuild:
  Stable for amd64, wrt bug #428346

  30 Jul 2012; Jeff Horelick <jdhore@gentoo.org> triplea-1.5.2.1.ebuild:
  marked x86 per bug 428346

  13 Jun 2012; Michael Sterrett <mr_bones_@gentoo.org> triplea-1.5.2.1.ebuild:
  tidy

*triplea-1.5.2.1 (13 Jun 2012)

  13 Jun 2012; Michael Sterrett <mr_bones_@gentoo.org> +triplea-1.5.2.1.ebuild:
  version bump with patch from Joe Sapp (bug #349341)

*triplea-1.0.0.3 (08 Jul 2008)

  08 Jul 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +triplea-1.0.0.3.ebuild:
  version bump

*triplea-1.0.0.2 (16 Jun 2008)

  16 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +triplea-1.0.0.2.ebuild:
  version bump
