@@ -1,10 +1,6 @@
-DIST triplea_1_5_2_1_source_code_only.zip 133170340 SHA256 c1b2ad8e897ac83b4b021c30970563da8937e4d3f52baa66219a5ad7fb68475e SHA512 d1cf630ae2eed98eb47bd5b93af89d59418005764efe0edcc3b764b9d8faf5315a74ad1d17ff7282939f3f830c196cee473dd4cea11efcd791429d98f0666997 WHIRLPOOL 5ddab5f97d5ecc1b9f950cf40fee3a8cbfbfd9ec29455967831318b22bc76ed381f33694b80a5137701b05f9737f47d28276f8232f0f260016d0f36a6fed08ce
 DIST triplea_1_6_1_2_source_code_only.zip 145599721 SHA256 1764a4485c5c439883016670d2f4c3cc7992d0b7af932712938b4b1d1c757053 SHA512 2989c92ce6d4578f988afc428f0f35b419095ddb9bf7d7def4600bd58970157257bde6e9d5204a04dcbf17bc9168f9f8ccee34a110d9508a2f9cdb45685c20b2 WHIRLPOOL 47fcac5a9c074c558650457812f6f2be238f03f312d59734c5e060c4a8bf30cd7588cb763ccfe3da2197ec35acaf8f94a732adf73865108340e48478acfeb8e8
-DIST triplea_1_6_1_4_source_code_only.zip 231522583 SHA256 dac68c4b85d16c5ccafc1cf4b160b7c7ecd9d48e2af3ec01434e411ea8a5fa0e SHA512 13edd2a013cb28f91cd4caee75ea44f473bddf89a8f25f80a0d1c524dc2b2857fba8d07a591804e1c62596b9cdd7037ae9de9c5543041baad3ee8437273d3e0a WHIRLPOOL a024a2a7970607dc413b93c090a42820eb60ad88aa1f35be4cd50aac44932688daa8630b29c07965ee7a1fc06c020807525dc21e5ebc1dfc6ed7c4044bee2cf3
 DIST triplea_1_7_0_3_source_code_only.zip 238479931 SHA256 4cd3a0596bfe4f81cc61e5eab02a5ccd96226a291c5afb8441df5bf9898829e5 SHA512 6d6ddff0a630e1ce357c00205636b3c7586159daf8a1c66fea371c0cd053aaa75814131267cb937d9e1dc313aa2eef99dd6c73fcd4275e82ac7a2250332a8a49 WHIRLPOOL da0b259ffaedecd425cd6ddecfef3d51bd35e0274dbd996298a4de299b1a4f8f8e0c74365af8fcaf21f49ab480b282562a6867c36b4918fcb6b4815b773308c2
-EBUILD triplea-1.5.2.1.ebuild 2740 SHA256 47e0e898c19f968962edbff29bd132fd36f42a775f3a6b91cf295e76ef59d967 SHA512 cd17f6769ba03761609dfc9987cffb438df6af71a75f040463edf8c0d6b67e893a4685a1eb5cf2ddd9460eaf37200beabaab92513da1fb01c30f961a8bb9160b WHIRLPOOL 13db796d6c98f570364621530644bee9f0ce037651159bb7b17131eec64bf3a9ace1db8b0f01cb4cd535c7dfdb9864a3c7e0fbba316eb8d37742859a894d265a
 EBUILD triplea-1.6.1.2.ebuild 2714 SHA256 2031174cfe84b4622360982fdf0bc24162f8ffffa2e36bd90a74927c7aebabb3 SHA512 6d44efdcb25797d7055a18fcf72e9970009f2ea7703fd1770012dc179e3dc86b8b4bc1e4d551dc8c09d5734f7db0efe2ba6689bb0517753d631238cf72921ce2 WHIRLPOOL 5aaf351eb2a6bc26d72bf8a7449ecdfbb114c73c4241a4e41bb027056fc3df679419bf48795187fe655f349c86bb9794a8218498d0d639829eecc0b027335ed9
-EBUILD triplea-1.6.1.4.ebuild 2729 SHA256 c507467faa117f279533d91650b4ba64b1798f069c8297f3bcd76307471cab87 SHA512 9efedd6b8a7d71170e28d9a90b5aec158742acc0240c1c331049ddb5f5b6ef60ea07b2c84afb8ded03f45b5dc27cb570e9dd1ed9adef903e3ed1687e90b8844b WHIRLPOOL 0acc4c77fe79f5260fb1ef3cf60934b4a58541f13e16a8aa6ec771f88330c6a4a5c1664dce548754d907c2b4c7186bfe57c1721a7c890286fd3fad6858996996
 EBUILD triplea-1.7.0.3.ebuild 2868 SHA256 2e67ba83fd805050b33abb648c4d08557f546f1d1e4455c50cf510e0b0867df2 SHA512 13307d24f835dc401574d669860348ad3363e16820cd26ef1833f1da4815c464fc56eb6747ee72b452450036d1f9a5ca3850f9e018b59ce3bdfd6cf8fa063ab3 WHIRLPOOL 6e18c8a4bd4495752c41afe8e416b1c9281c0fa1e188bf436400d97d107c01f53cd1f7301f74510e53511bdb23e8d4f7cbdedda949a91ca608b067c13839894f
-MISC ChangeLog 6851 SHA256 7e346958f960c14daacaab36e1a08dd3f70c67f9ab4de20ce2c4e601602e88aa SHA512 a3b6d59a6d4f829172c1b8cd724e885d08b3519ff7ed7b9bae51cbda9c73cd490d1a78896fa795220df018f9a7f7e60e2484e45a2c0dcccb1179f655be0a4e66 WHIRLPOOL 5c7dfa949688af96039f9ceaa13a0b35695459a70a0e746f0670edf9105a78b0321ffcbcd1c2d5b848dfad9aef3ede6518518c89dd40dfaea174d56f034042dc
+MISC ChangeLog 6965 SHA256 0b95b3116d7f8d02e022a9d3435dc7908768ed650ed8a451ffd13f3c2191542e SHA512 d00f2bc3b4aeee3c9834ce82299935867b12025b515c31ddd490f316b32c66a21df1b73cd8270db898dd9d1cb2647002159f9f4512888a0d51f6d6088ed81348 WHIRLPOOL 58f909dc3179f3ee463f213d6b8bfb8be6b8305c55c1a7be922e5cf850d982229742297b7af6790550b64ef501860052a0e814ddd793add837d54d2b7b093d51
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
