@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/triplea
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/triplea/ChangeLog,v 1.53 2013/05/31 21:41:14 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/triplea/ChangeLog,v 1.54 2013/07/19 19:16:14 mr_bones_ Exp $
+
+  19 Jul 2013; Michael Sterrett <mr_bones_@gentoo.org> -triplea-1.5.2.1.ebuild,
+  -triplea-1.6.1.4.ebuild:
+  old
 
 *triplea-1.7.0.3 (31 May 2013)
 
